android hit testing seems broken
Categories
(Core :: Panning and Zooming, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox75 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | fixed |
People
(Reporter: tnikkel, Assigned: botond)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR, in an android browser (geckoview example, reference browser, fenix) load https://developer.mozilla.org/en-US/docs/Web/API/MouseEvent/screenX
Scroll down to the "Result" box with live update of mouse position. Pinch zoom in, tap the box. The mouse position is not updated, it should be. Also, if you long tap words they won't be selected.
I tested in a geckoview example build based off a May 3 changeset and the problem does not exist. I initially suspect bug 1556556.
| Assignee | ||
Comment 1•5 years ago
|
||
The issue first appeared in the May 6th GVE nightly, which is also the first one to include bug 1556556. I agree that it is the likely suspect.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
In a debug build, I'm seeing this assertion firing.
| Assignee | ||
Comment 3•5 years ago
|
||
(In reply to Botond Ballo [:botond] from comment #2)
In a debug build, I'm seeing this assertion firing.
This is only triggered when the pinch gesture to zoom in is made over the interactive "Result" box. It may be an unrelated issue.
Comment 4•5 years ago
|
||
If the regressing patch has been identified, can it be backed out until a fix is found?
| Assignee | ||
Comment 6•5 years ago
|
||
I was able to coax RDM into reproducing this and debug it in rr. It's a bug in the changes bug 1556556 made to nsIFrame::GetTransformMatrix().
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
This offset is essentially the layout scroll offset, to it's in layout coordinates.
Comment 9•5 years ago
|
||
| bugherder | ||
Description
•