Bug 1637113 - Apply the offset from the canvas frame to the scroll frame before the layout-to-visual transform. r=tnikkel

This offset is essentially the layout scroll offset, so it's in layout coordinates.

Differential Revision: https://phabricator.services.mozilla.com/D74997